infra/k8s/02-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-inventory-db
  labels:
    app.kubernetes.io/part-of: smart-inventory
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          name: dbport
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: pg-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: smart-inventory-db
  labels:
    app.kubernetes.io/part-of: smart-inventory
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
