infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-backend-svc
spec:
  selector:
    app: inventory-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-frontend-svc
spec:
  selector:
    app: inventory-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-svc
spec:
  selector:
    app: inventory-api-service
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: alert-api-svc
spec:
  selector:
    app: alert-api-service
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: inventory-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
